deploy/3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-06-08T20:52:36Z"
  generation: 1
  labels:
    run: url-shortener
  name: url-shortener
  namespace: default
  # resourceVersion: "5800"
  selfLink: /apis/apps/v1/namespaces/default/deployments/url-shortener
  # uid: 5f97ce52-c437-4296-9a08-f01641a379ea
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: url-shortener
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: url-shortener
    spec:
      containers:
        - image: gcr.io/sunlit-mix-280420/url-shortener:v1
          name: url-shortener
          ports:
            - containerPort: 8761
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
    - lastTransitionTime: "2020-06-08T20:52:36Z"
      lastUpdateTime: "2020-06-08T20:52:36Z"
      message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    - lastTransitionTime: "2020-06-08T21:02:36Z"
      lastUpdateTime: "2020-06-08T21:02:36Z"
      message: ReplicaSet "url-shortener-d65c689b7" has timed out progressing.
      reason: ProgressDeadlineExceeded
      status: "False"
      type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
