deploy/4-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-06-08T20:54:56Z"
  labels:
    run: url-shortener
  name: url-shortener
  namespace: default
  # resourceVersion: "4782"
  selfLink: /api/v1/namespaces/default/services/url-shortener
  # uid: 6607f76c-ca45-44fb-947f-d55e9ed7f856
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30779
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: url-shortener
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
