deploy/5-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: url-shortener-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: url-shortener
              servicePort: 80
